src/test/ui/rfc1598-generic-associated-types/collections.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/collections.rs:65:90
   |
LL | fn floatify<C>(ints: &C) -> <<C as Collection<i32>>::Family as CollectionFamily>::Member<f32>
   |                                                                                          ^^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/collections.rs:77:69
   |
LL | fn floatify_sibling<C>(ints: &C) -> <C as Collection<i32>>::Sibling<f32>
   |                                                                     ^^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/collections.rs:26:71
   |
LL |         <<Self as Collection<T>>::Family as CollectionFamily>::Member<U>;
   |                                                                       ^ type parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/collections.rs:33:50
   |
LL |     fn iterate<'iter>(&'iter self) -> Self::Iter<'iter>;
   |                                                  ^^^^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/collections.rs:59:50
   |
LL |     fn iterate<'iter>(&'iter self) -> Self::Iter<'iter> {
   |                                                  ^^^^^ lifetime parameter not allowed

error: aborting due to 5 previous errors

Some errors occurred: E0109, E0110.
For more information about an error, try `rustc --explain E0109`.
